--- a/dbt-airflow-lib/pyproject.toml
+++ b/dbt-airflow-lib/pyproject.toml
@@ -7,7 +7,7 @@ name = "dlh-airflow-common"
 dynamic = ["version"]
 description = "Common Airflow operators and utilities library"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10,<3.14"
 license = {text = "MIT"}
 authors = [
     {name = "Your Team", email = "team@example.com"}
@@ -18,11 +18,10 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 
 dependencies = [
