--- a/dbt-airflow-lib/pyproject.toml
+++ b/dbt-airflow-lib/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "Common Airflow operators and utilities library"
 readme = "README.md"
 requires-python = ">=3.10,<3.14"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "Your Team", email = "team@example.com"}
 ]
@@ -16,7 +16,6 @@ keywords = ["airflow", "operators", "workflow"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -37,6 +36,8 @@ dev = [
     "black>=23.0.0",
     "mypy>=1.0.0",
     "tox>=4.0.0",
+    "build>=1.0.0",
+    "twine>=5.0.0",
 ]
 
 [project.urls]
