--- a/dbt-airflow-lib/tox.ini
+++ b/dbt-airflow-lib/tox.ini
@@ -1,5 +1,45 @@
+# =============================================================================
+# Tox Configuration for dlh-airflow-common
+# =============================================================================
+#
+# Multi-environment testing tool for running tests across Python versions
+# and performing code quality checks.
+#
+# Prerequisites:
+#   pip install tox
+#   # Or with uv:
+#   uv pip install tox
+#
+# Quick Start:
+#   tox                     # Run all environments (py311, py312, lint, format, type-check)
+#   tox -e py311            # Run tests on Python 3.11 only
+#   tox -e py312            # Run tests on Python 3.12 only
+#   tox -e py311,py312      # Run tests on Python 3.11 and 3.12
+#   tox -e lint             # Run linting only
+#   tox -e format           # Check code formatting
+#   tox -e format-fix       # Auto-fix code formatting
+#   tox -e type-check       # Run type checking with mypy
+#   tox -e coverage         # Run tests with coverage report (100% required)
+#   tox -e build            # Build the package
+#   tox -e all              # Run all checks in single environment
+#
+# Parallel Execution:
+#   tox -p auto             # Run all environments in parallel
+#   tox -p 4                # Run with 4 parallel workers
+#
+# Pass Arguments to pytest:
+#   tox -e py311 -- -v                    # Verbose output
+#   tox -e py311 -- -k "test_dbt"         # Run specific tests
+#   tox -e py311 -- --pdb                 # Drop into debugger on failure
+#
+# List Available Environments:
+#   tox -l                  # List all environments
+#   tox -av                 # List all with descriptions
+#
+# =============================================================================
+
 [tox]
-envlist = py{38,39,310,311,312}, lint, format, type-check
+envlist = py{311,312}, lint, format, type-check
 isolated_build = true
 skip_missing_interpreters = true
 
@@ -9,7 +49,7 @@ deps =
     pytest>=7.0.0
     pytest-cov>=4.0.0
     pytest-mock>=3.10.0
-    apache-airflow>=2.5.0
+    apache-airflow>=3.1.0,<4.0.0
 commands =
     pytest {posargs:tests/}
 
@@ -38,7 +78,7 @@ commands =
 description = Run type checking with mypy
 deps =
     mypy>=1.0.0
-    apache-airflow>=2.5.0
+    apache-airflow>=3.1.0,<4.0.0
 commands =
     mypy src/
 
@@ -48,9 +88,9 @@ deps =
     pytest>=7.0.0
     pytest-cov>=4.0.0
     pytest-mock>=3.10.0
-    apache-airflow>=2.5.0
+    apache-airflow>=3.1.0,<4.0.0
 commands =
-    pytest --cov=dlh_airflow_common --cov-report=html --cov-report=term tests/
+    pytest --cov=dlh_airflow_common --cov-report=html --cov-report=term --cov-fail-under=100 tests/
 
 [testenv:build]
 description = Build the package
