--- a/dbt-airflow-lib/pyproject.toml
+++ b/dbt-airflow-lib/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 
 dependencies = [
     "apache-airflow>=3.1.0,<4.0.0",
+    "PyYAML>=6.0",
 ]
 
 [project.optional-dependencies]
@@ -35,10 +36,14 @@ dev = [
     "ruff>=0.1.0",
     "black>=23.0.0",
     "mypy>=1.0.0",
+    "types-PyYAML>=6.0.0",
     "tox>=4.0.0",
     "build>=1.0.0",
     "twine>=5.0.0",
 ]
+
+[project.scripts]
+validate-dags = "dlh_airflow_common.validation.cli:main"
 
 [project.urls]
 Homepage = "https://github.com/yourorg/dlh-airflow-common"
@@ -114,7 +119,7 @@ known-first-party = ["dlh_airflow_common"]
 
 # Mypy configuration
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
