--- a/dbt-airflow-lib/tox.ini
+++ b/dbt-airflow-lib/tox.ini
@@ -11,26 +11,30 @@
 #   uv pip install tox
 #
 # Quick Start:
-#   tox                     # Run all environments (py311, py312, lint, format, type-check)
-#   tox -e py311            # Run tests on Python 3.11 only
-#   tox -e py312            # Run tests on Python 3.12 only
-#   tox -e py311,py312      # Run tests on Python 3.11 and 3.12
-#   tox -e lint             # Run linting only
-#   tox -e format           # Check code formatting
-#   tox -e format-fix       # Auto-fix code formatting
-#   tox -e type-check       # Run type checking with mypy
-#   tox -e coverage         # Run tests with coverage report (100% required)
-#   tox -e build            # Build the package
-#   tox -e all              # Run all checks in single environment
+#   tox                          # Run all environments
+#   tox -e lint                  # Run linting only
+#   tox -e format                # Check code formatting
+#   tox -e format-fix            # Auto-fix code formatting
+#   tox -e type-check            # Run type checking with mypy
+#   tox -e coverage              # Run tests with coverage report (100% required)
+#   tox -e integration           # Run integration tests with dbt-duckdb
+#   tox -e build                 # Build the package
+#   tox -e all                   # Run all checks in single environment
+#
+# Test Airflow Version Matrix:
+#   tox -e py311-airflow31       # Python 3.11 + Airflow 3.1.x (current stable)
+#   tox -e py312-airflow31       # Python 3.12 + Airflow 3.1.x
+#   tox -e py311-airflow32       # Python 3.11 + Airflow 3.2.x (future release)
+#   tox -e py312-airflow32       # Python 3.12 + Airflow 3.2.x (future release)
 #
 # Parallel Execution:
 #   tox -p auto             # Run all environments in parallel
 #   tox -p 4                # Run with 4 parallel workers
 #
 # Pass Arguments to pytest:
-#   tox -e py311 -- -v                    # Verbose output
-#   tox -e py311 -- -k "test_dbt"         # Run specific tests
-#   tox -e py311 -- --pdb                 # Drop into debugger on failure
+#   tox -e py311-airflow31 -- -v              # Verbose output
+#   tox -e py311-airflow31 -- -k "test_dbt"   # Run specific tests
+#   tox -e py311-airflow31 -- --pdb           # Drop into debugger on failure
 #
 # List Available Environments:
 #   tox -l                  # List all environments
@@ -39,19 +43,30 @@
 # =============================================================================
 
 [tox]
-envlist = py{311,312}, lint, format, type-check
+# Test matrix: Python 3.11/3.12 × Airflow 3.1/3.2
+# Current: Airflow 3.1.x is primary (stable)
+# Future: Airflow 3.2.x tests will be enabled when released
+envlist = py{311,312}-airflow{31,32}, lint, format, type-check
 isolated_build = true
 skip_missing_interpreters = true
 
+# Use uv for faster package installation and better compatibility
+requires = uv>=0.1.0
+
 [testenv]
 description = Run unit tests with pytest
+# Use uv-managed Python installations
+base_python =
+    py311: {env:HOME}/.local/share/uv/python/cpython-3.11.13-linux-x86_64-gnu/bin/python3.11
+    py312: {env:HOME}/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/bin/python3.12
 deps =
     pytest>=7.0.0
     pytest-cov>=4.0.0
     pytest-mock>=3.10.0
-    apache-airflow>=3.1.0,<4.0.0
+    airflow31: apache-airflow>=3.1.0,<3.2.0
+    airflow32: apache-airflow>=3.2.0,<3.3.0  # Will install when 3.2.0 is released
 commands =
-    pytest {posargs:tests/}
+    pytest --no-cov {posargs:tests/}
 
 [testenv:lint]
 description = Run linting with ruff
@@ -78,7 +93,8 @@ commands =
 description = Run type checking with mypy
 deps =
     mypy>=1.0.0
-    apache-airflow>=3.1.0,<4.0.0
+    apache-airflow>=3.1.0,<3.2.0
+    types-PyYAML>=6.0.0
 commands =
     mypy src/
 
@@ -88,7 +104,7 @@ deps =
     pytest>=7.0.0
     pytest-cov>=4.0.0
     pytest-mock>=3.10.0
-    apache-airflow>=3.1.0,<4.0.0
+    apache-airflow>=3.1.0,<3.2.0
 commands =
     pytest --cov=dlh_airflow_common --cov-report=html --cov-report=term --cov-fail-under=100 tests/
 
@@ -98,6 +114,15 @@ deps =
     build>=0.10.0
 commands =
     python -m build
+
+[testenv:integration]
+description = Run integration tests with real dbt execution
+deps =
+    {[testenv]deps}
+    dbt-duckdb>=1.8.0
+    dag-factory>=0.18.0
+commands =
+    pytest -m integration tests/integration/ --no-cov {posargs}
 
 [testenv:all]
 description = Run all checks (lint, format, type-check, tests)
