--- a/dbt-airflow-lib/Makefile
+++ b/dbt-airflow-lib/Makefile
@@ -117,6 +117,8 @@ clean:
 	rm -rf .ruff_cache
 	find . -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null || true
 	find . -type f -name "*.pyc" -delete 2>/dev/null || true
+	find . -type f -name "*.pyo" -delete 2>/dev/null || true
+	find . -type f -name "*.py~" -delete 2>/dev/null || true
 
 # =============================================================================
 # Testing
