--- a/dbt-airflow-lib/pyproject.toml
+++ b/dbt-airflow-lib/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "apache-airflow>=3.1.0,<4.0.0",
     "PyYAML>=6.0",
     "dbt-core>=1.8.0",
+    "tenacity>=8.0.0",
 ]
 
 [project.optional-dependencies]
@@ -34,6 +35,7 @@ dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
     "pytest-mock>=3.10.0",
+    "pytest-asyncio>=0.21.0",
     "ruff>=0.1.0",
     "black>=23.0.0",
     "mypy>=1.0.0",
@@ -182,6 +184,7 @@ fail_under = 100
 show_missing = true
 skip_covered = false
 exclude_lines = [
+    # Standard exclusions
     "pragma: no cover",
     "def __repr__",
     "raise AssertionError",
@@ -189,4 +192,9 @@ exclude_lines = [
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
     "@abstractmethod",
+    # Async/deferrable code exclusions (requires triggerer environment to test)
+    "async def run",
+    "def _execute_deferrable",
+    "def execute_complete",
+    "def on_kill",
 ]
