--- a/dbt-airflow-lib/tox.ini
+++ b/dbt-airflow-lib/tox.ini
@@ -50,15 +50,12 @@ envlist = py{311,312}-airflow{31,32}, lint, format, type-check
 isolated_build = true
 skip_missing_interpreters = true
 
-# Use uv for faster package installation and better compatibility
-requires = uv>=0.1.0
+# Use tox-uv for faster package installation with uv
+requires = tox-uv>=1.0.0
 
 [testenv]
 description = Run unit tests with pytest
-# Use uv-managed Python installations
-base_python =
-    py311: {env:HOME}/.local/share/uv/python/cpython-3.11.13-linux-x86_64-gnu/bin/python3.11
-    py312: {env:HOME}/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/bin/python3.12
+# Let tox discover Python interpreters from PATH (installed via uv python install)
 deps =
     pytest>=7.0.0
     pytest-cov>=4.0.0
