--- a/dbt-airflow-lib/tox.ini
+++ b/dbt-airflow-lib/tox.ini
@@ -21,11 +21,11 @@
 #   tox -e build                 # Build the package
 #   tox -e all                   # Run all checks in single environment
 #
-# Test Airflow Version Matrix:
-#   tox -e py311-airflow31       # Python 3.11 + Airflow 3.1.x (current stable)
-#   tox -e py312-airflow31       # Python 3.12 + Airflow 3.1.x
-#   tox -e py311-airflow32       # Python 3.11 + Airflow 3.2.x (future release)
-#   tox -e py312-airflow32       # Python 3.12 + Airflow 3.2.x (future release)
+# Test Version Matrix (Python × Airflow × dbt-core):
+#   tox -e py311-airflow31-dbt18   # Python 3.11 + Airflow 3.1.x + dbt-core 1.8.x
+#   tox -e py311-airflow31-dbt110  # Python 3.11 + Airflow 3.1.x + dbt-core 1.10.x
+#   tox -e py312-airflow31-dbt110  # Python 3.12 + Airflow 3.1.x + dbt-core 1.10.x
+#   Note: py312-dbt18 excluded due to importlib-metadata conflict
 #
 # Parallel Execution:
 #   tox -p auto             # Run all environments in parallel
@@ -43,10 +43,11 @@
 # =============================================================================
 
 [tox]
-# Test matrix: Python 3.11/3.12 × Airflow 3.1/3.2
-# Current: Airflow 3.1.x is primary (stable)
+# Test matrix: Python 3.11/3.12 × Airflow 3.1/3.2 × dbt-core 1.8/1.10
+# Current: Airflow 3.1.x + dbt-core 1.8.x/1.10.x
 # Future: Airflow 3.2.x tests will be enabled when released
-envlist = py{311,312}-airflow{31,32}, lint, format, type-check
+# Note: py312-dbt18 excluded due to importlib-metadata conflict
+envlist = py311-airflow{31,32}-dbt{18,110}, py312-airflow{31,32}-dbt110, lint, format, type-check
 isolated_build = true
 skip_missing_interpreters = true
 
@@ -62,6 +63,8 @@ deps =
     pytest-mock>=3.10.0
     airflow31: apache-airflow>=3.1.0,<3.2.0
     airflow32: apache-airflow>=3.2.0,<3.3.0  # Will install when 3.2.0 is released
+    dbt18: dbt-core>=1.8.0,<1.9.0
+    dbt110: dbt-core>=1.10.0,<1.11.0
 commands =
     pytest --no-cov {posargs:tests/}
 
