--- a/dbt-airflow-lib/pyproject.toml
+++ b/dbt-airflow-lib/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 dependencies = [
     "apache-airflow>=3.1.0,<4.0.0",
     "PyYAML>=6.0",
-    "dbt-core>=1.8.0",
+    "dbt-core>=1.8.0,<1.11.0",
     "tenacity>=8.0.0",
 ]
 
